Creato con Colab

--- a/suite2p_run.ipynb
+++ b/suite2p_run.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkUIISBdusB1/4QImNJ+O8",
+      "authorship_tag": "ABX9TyPNXIYNqjLDWBOmMuNWRIbo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,99 +30,15 @@
       "cell_type": "code",
       "source": [
         "!pip install suite2p\n",
-        "!pip install \"opencv-python-headless<4.3\"\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "aCwfTl77LwBe",
-        "outputId": "52948074-1e1e-48a7-84f9-0c367275e0fe"
+        "id": "aCwfTl77LwBe"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: suite2p in /usr/local/lib/python3.12/dist-packages (0.14.6)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.12/dist-packages (from suite2p) (8.7.0)\n",
-            "Requirement already satisfied: natsort in /usr/local/lib/python3.12/dist-packages (from suite2p) (8.4.0)\n",
-            "Requirement already satisfied: rastermap>=0.9.0 in /usr/local/lib/python3.12/dist-packages (from suite2p) (1.0)\n",
-            "Requirement already satisfied: tifffile in /usr/local/lib/python3.12/dist-packages (from suite2p) (2025.8.28)\n",
-            "Requirement already satisfied: torch>=1.13.1 in /usr/local/lib/python3.12/dist-packages (from suite2p) (2.8.0+cu126)\n",
-            "Requirement already satisfied: numpy>=1.24.3 in /usr/local/lib/python3.12/dist-packages (from suite2p) (2.0.2)\n",
-            "Requirement already satisfied: numba>=0.57.0 in /usr/local/lib/python3.12/dist-packages (from suite2p) (0.60.0)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from suite2p) (3.10.0)\n",
-            "Requirement already satisfied: scipy>=1.9.0 in /usr/local/lib/python3.12/dist-packages (from suite2p) (1.16.1)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.12/dist-packages (from suite2p) (1.6.1)\n",
-            "Requirement already satisfied: cellpose>=4.0.1 in /usr/local/lib/python3.12/dist-packages (from suite2p) (4.0.6)\n",
-            "Requirement already satisfied: scanimage-tiff-reader>=1.4.1 in /usr/local/lib/python3.12/dist-packages (from suite2p) (1.4.1.4)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (4.67.1)\n",
-            "Requirement already satisfied: torchvision in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (0.23.0+cu126)\n",
-            "Requirement already satisfied: opencv-python-headless in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (4.12.0.88)\n",
-            "Requirement already satisfied: fastremap in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (1.17.5)\n",
-            "Requirement already satisfied: imagecodecs in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (2025.8.2)\n",
-            "Requirement already satisfied: roifile in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (2025.5.10)\n",
-            "Requirement already satisfied: fill-voids in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (2.1.1)\n",
-            "Requirement already satisfied: segment_anything in /usr/local/lib/python3.12/dist-packages (from cellpose>=4.0.1->suite2p) (1.0)\n",
-            "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /usr/local/lib/python3.12/dist-packages (from numba>=0.57.0->suite2p) (0.43.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (3.19.1)\n",
-            "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (4.15.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (75.2.0)\n",
-            "Requirement already satisfied: sympy>=1.13.3 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (1.13.3)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (3.5)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (3.1.6)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (2025.3.0)\n",
-            "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.6.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.6.77)\n",
-            "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.6.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.6.77)\n",
-            "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.6.80 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.6.80)\n",
-            "Requirement already satisfied: nvidia-cudnn-cu12==9.10.2.21 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (9.10.2.21)\n",
-            "Requirement already satisfied: nvidia-cublas-cu12==12.6.4.1 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.6.4.1)\n",
-            "Requirement already satisfied: nvidia-cufft-cu12==11.3.0.4 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (11.3.0.4)\n",
-            "Requirement already satisfied: nvidia-curand-cu12==10.3.7.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (10.3.7.77)\n",
-            "Requirement already satisfied: nvidia-cusolver-cu12==11.7.1.2 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (11.7.1.2)\n",
-            "Requirement already satisfied: nvidia-cusparse-cu12==12.5.4.2 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.5.4.2)\n",
-            "Requirement already satisfied: nvidia-cusparselt-cu12==0.7.1 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (0.7.1)\n",
-            "Requirement already satisfied: nvidia-nccl-cu12==2.27.3 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (2.27.3)\n",
-            "Requirement already satisfied: nvidia-nvtx-cu12==12.6.77 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.6.77)\n",
-            "Requirement already satisfied: nvidia-nvjitlink-cu12==12.6.85 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (12.6.85)\n",
-            "Requirement already satisfied: nvidia-cufile-cu12==1.11.1.6 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (1.11.1.6)\n",
-            "Requirement already satisfied: triton==3.4.0 in /usr/local/lib/python3.12/dist-packages (from torch>=1.13.1->suite2p) (3.4.0)\n",
-            "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.12/dist-packages (from importlib-metadata->suite2p) (3.23.0)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (1.3.3)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (4.59.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (1.4.9)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (25.0)\n",
-            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (11.3.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (3.2.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib->suite2p) (2.9.0.post0)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn->suite2p) (1.5.2)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn->suite2p) (3.6.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib->suite2p) (1.17.0)\n",
-            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch>=1.13.1->suite2p) (1.3.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch>=1.13.1->suite2p) (3.0.2)\n",
-            "Collecting opencv-python-headless<4.3\n",
-            "  Downloading opencv_python_headless-3.4.18.65-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (18 kB)\n",
-            "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.12/dist-packages (from opencv-python-headless<4.3) (2.0.2)\n",
-            "Downloading opencv_python_headless-3.4.18.65-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (45.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.7/45.7 MB\u001b[0m \u001b[31m22.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: opencv-python-headless\n",
-            "  Attempting uninstall: opencv-python-headless\n",
-            "    Found existing installation: opencv-python-headless 4.12.0.88\n",
-            "    Uninstalling opencv-python-headless-4.12.0.88:\n",
-            "      Successfully uninstalled opencv-python-headless-4.12.0.88\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "albucore 0.0.24 requires opencv-python-headless>=4.9.0.80, but you have opencv-python-headless 3.4.18.65 which is incompatible.\n",
-            "albumentations 2.0.8 requires opencv-python-headless>=4.9.0.80, but you have opencv-python-headless 3.4.18.65 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed opencv-python-headless-3.4.18.65\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -134,53 +50,10 @@
       ],
       "metadata": {
         "id": "CvBZUaFFM6dT",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 271
-        },
-        "collapsed": true,
-        "outputId": "c2409d3d-106b-4839-ed2d-742b419ff125"
+        "collapsed": true
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "module compiled against ABI version 0x1000009 but this version of numpy is 0x2000000",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;31mRuntimeError\u001b[0m: module compiled against ABI version 0x1000009 but this version of numpy is 0x2000000"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "module compiled against ABI version 0x1000009 but this version of numpy is 0x2000000",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;31mRuntimeError\u001b[0m: module compiled against ABI version 0x1000009 but this version of numpy is 0x2000000"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "module compiled against ABI version 0x1000009 but this version of numpy is 0x2000000",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;31mRuntimeError\u001b[0m: module compiled against ABI version 0x1000009 but this version of numpy is 0x2000000"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'suite2p_version': '0.14.6', 'look_one_level_down': False, 'fast_disk': [], 'delete_bin': False, 'mesoscan': False, 'bruker': False, 'bruker_bidirectional': False, 'h5py': [], 'h5py_key': 'data', 'nwb_file': '', 'nwb_driver': '', 'nwb_series': '', 'save_path0': '', 'save_folder': [], 'subfolders': [], 'move_bin': False, 'nplanes': 1, 'nchannels': 1, 'functional_chan': 1, 'tau': 1.0, 'fs': 13, 'force_sktiff': False, 'frames_include': -1, 'multiplane_parallel': False, 'ignore_flyback': [], 'preclassify': 0.0, 'save_mat': False, 'save_NWB': False, 'combined': True, 'aspect': 1.0, 'do_bidiphase': False, 'bidiphase': 0, 'bidi_corrected': False, 'do_registration': True, 'two_step_registration': False, 'keep_movie_raw': False, 'nimg_init': 300, 'batch_size': 500, 'maxregshift': 0.1, 'align_by_chan': 1, 'reg_tif': False, 'reg_tif_chan2': False, 'subpixel': 10, 'smooth_sigma_time': 0, 'smooth_sigma': 1.15, 'th_badframes': 1.0, 'norm_frames': True, 'force_refImg': False, 'pad_fft': False, 'nonrigid': True, 'block_size': [128, 128], 'snr_thresh': 1.2, 'maxregshiftNR': 5, '1Preg': False, 'spatial_hp_reg': 42, 'pre_smooth': 0, 'spatial_taper': 40, 'roidetect': True, 'spikedetect': True, 'sparse_mode': True, 'spatial_scale': 0, 'connected': True, 'nbinned': 5000, 'max_iterations': 20, 'threshold_scaling': 1.0, 'max_overlap': 0.75, 'high_pass': 100, 'spatial_hp_detect': 25, 'denoise': False, 'anatomical_only': 0, 'diameter': 0, 'cellprob_threshold': 0.0, 'flow_threshold': 0.4, 'spatial_hp_cp': 0, 'pretrained_model': 'cpsam', 'soma_crop': True, 'neuropil_extract': True, 'inner_neuropil_radius': 2, 'min_neuropil_pixels': 350, 'lam_percentile': 50.0, 'allow_overlap': False, 'use_builtin_classifier': False, 'classifier_path': '', 'chan2_thres': 0.65, 'baseline': 'maximin', 'win_baseline': 60.0, 'sig_baseline': 10.0, 'prctile_baseline': 8.0, 'neucoeff': 0.7}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
