Creato con Colab

--- a/suite2p_visualizations.ipynb
+++ b/suite2p_visualizations.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyORxK3q+Sv7dKn12ourlBGT",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/heatherstrelevitz/ht_workshop/blob/main/suite2p_visualizations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -88,6 +100,43 @@
       ],
       "metadata": {
         "id": "wduwqfxpXEmY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#remove frame artifacts\n",
+        "\n",
+        "# Calculate difference of mean values across columns\n",
+        "dPop = np.diff(np.mean(neuron.F, axis=0), prepend=0)\n",
+        "\n",
+        "# Identify artifacts where change is > 50\n",
+        "artefacts = np.abs(dPop) > 50\n",
+        "\n",
+        "# Set artifact columns to NaN\n",
+        "neuron.F[:, artefacts] = np.nan\n",
+        "neuron.neuropil[:, artefacts] = np.nan\n",
+        "\n",
+        "#define a function to interpolate across the nans\n",
+        "def interpNaN(array):\n",
+        "    array = array.copy()\n",
+        "    nans = np.isnan(array)\n",
+        "    x = nans.nonzero()[0]\n",
+        "    xp = (~nans).nonzero()[0]\n",
+        "    fp = array[~nans]\n",
+        "    array[nans] = np.interp(x, xp, fp)\n",
+        "    return array\n",
+        "\n",
+        "# If artifacts found, interpolate NaNs along each row\n",
+        "if np.sum(artefacts) > 0:\n",
+        "    for iN in range(nN):\n",
+        "        neuron.F[iN, :] = interpNaN(neuron.F[iN, :])\n",
+        "        neuron.neuropil[iN, :] = interpNaN(neuron.neuropil[iN, :])\n"
+      ],
+      "metadata": {
+        "id": "g5dieHOZcxK1"
       },
       "execution_count": null,
       "outputs": []
